# ic_segmentation

./: .gitignore  CLAUDE.md  PROFILING_RESULTS.md  README.md  TRAINING_DEMO.md  config.yaml  config_.yaml  hello.py  logs.md  package-lock.json  profiler_output.txt  pyproject.toml  requirements.txt  requirements_neuroverse3d.txt  setup.py
.claude/: .nfs0000000000464f4f000015ea  .nfs0000000000fbbc3c0000123d  .nfs0000000000fbf3d70000123e  .nfs0000000000fc0e5d0000123f  .nfs0000000000fd7d6900001261  settings.local.json
configs/: augmentation.yaml  config.yaml  eval.yaml  train.yaml
data/: get_medsegbench.py  label_ids_totalseg.py  label_stats.csv  medsegbench_metadata.pkl  medsegbench_metadata.py  medsegbench_split.md
docs/: NEUROVERSE3D_TRAINING.md  logs.md  patch_icl_todo.md
examples/: totalsegmentator_usage.py  train_neuroverse3d_example.sh
experiments/: README_foreground_sampling.md  create_dataset.ipynb  dataloading.py  epoch_end_metrics.csv  eval_medverse.py  eval_neuroverse3d.py  eval_totalseg.py  medsegbench_viz.py  nmsw_sampling.py  segfm3d_tasks_dict.py  seggpt.py  seggpt_eval.py  semantic_segmentation.py  token_nmsw.py  train_token_nmsw.py  train_totalseg.py  train_totalseg_nmsw.py  visualize_inspection.py  wandb_stats.ipynb
notebooks/: 3dino_xgboost.py  TotalSeg.ipynb  add_task_nora.ipynb  bertviz.md  dinov3.ipynb  eval_totalseg.ipynb  incontext_eval.ipynb  medverse.ipynb  neuroverse3d.ipynb  register_tokens.ipynb  totalseg_2d.ipynb
old/: count_params.py  eval_neuroverse3d.py  seggpt_eval.py  totalsegmentator_quickstart.md
results/: analyze_register_tokens.py  category_maps.py  comp_medsegbench copy 2.ipynb  comp_medsegbench copy.ipynb  ref.bib  (+14 more)
(+252 files in other folders)
