[project]
name = "ic-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.36.0",
    "hydra-core>=1.3.2",
    "monai>=1.5.1",
    "nibabel>=5.3.3",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "wandb>=0.24.0",
]
