[project]
name = "ic-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.36.0",
    "hydra-core>=1.3.2",
    "monai==1.5.1",
    "nibabel>=5.3.3",
    "numpy>=2.0,<2.3",
    "pandas<3.0.0",
    "pillow>=12.1.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers>=4.57.6",
    "wandb>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
